refactored Messages